--- a/LuceneSearch/LuceneSearch/App.xaml
+++ b/LuceneSearch/LuceneSearch/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="LuceneSearch.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LuceneSearch"
-             StartupUri="MainWindow.xaml">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="LuceneSearch.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:LuceneSearch" StartupUri="MainWindow.xaml">
     <Application.Resources>
         
-    </Application.Resources>
+    <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary></Application.Resources>
 </Application>
